src/test/deca/context/invalid/classextends18.deca
class A{}
class Object extends A{

}




